Horizontal scrollbar issue on display resolution 1280 X 1024

--- a/projects/fee/src/app/feemaster/fee-ledger/fee-ledger.component.scss
+++ b/projects/fee/src/app/feemaster/fee-ledger/fee-ledger.component.scss
@@ -1,107 +1,117 @@
 .table-fee-ledger {
-    height: 500px;
-    overflow: hidden;
+  height: 500px;
+  overflow: hidden;
 }
 .table-fee-ledger-child {
-    overflow-y: scroll;
-    height: 100%
+  overflow-y: scroll;
+  height: 100%;
 }
 .font-underline {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
-.fa-rupee-sign{
-    font-size: 12px;
+.fa-rupee-sign {
+  font-size: 12px;
 }
 .mat-column-srno {
-    width: 3% !important;
-    flex: 0 0 8% !important;
+  width: 3% !important;
+  flex: 0 0 8% !important;
 }
 .cdk-column-feehead {
-    width: 65%!important;
+  width: 65% !important;
 }
 @media only screen and (max-width: 1024px) {
-    .cdk-column-feehead {
-        width: 55%!important;
-    }
+  .cdk-column-feehead {
+    width: 55% !important;
+  }
 }
 td.mat-cell {
-    border: 1px solid #89A8C9 !important;
+  border: 1px solid #89a8c9 !important;
 }
 th.mat-header-cell {
-    border: 1px solid #89A8C9 !important;
-    border-collapse: collapse;
+  border: 1px solid #89a8c9 !important;
+  border-collapse: collapse;
 }
 tr.mat-footer-row {
-    font-weight: bold;
-    border: 1px solid #89A8C9 !important;
-    border-collapse: collapse;
+  font-weight: bold;
+  border: 1px solid #89a8c9 !important;
+  border-collapse: collapse;
 }
 td.mat-footer-cell {
-    border: 1px solid #89A8C9 !important;
-    border-collapse: collapse;
+  border: 1px solid #89a8c9 !important;
+  border-collapse: collapse;
 }
 
 .btn-unconsolidate {
-    background: #004261;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 0 5px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px !important;
+  background: #004261;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0 5px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px !important;
 }
 
 .btn-receiptMod {
-    background: #004261;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 0 5px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px !important;
+  background: #004261;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0 5px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px !important;
 }
 .btn-delete-rec {
-    background: #ff5a5a;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 0 5px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px !important;
+  background: #ff5a5a;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0 5px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px !important;
 }
 .btn-cancel-rec {
-    background: #FF7F50;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 0 5px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px !important;
+  background: #ff7f50;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0 5px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px !important;
 }
 
-.btn-edit-inv{
-    background: #6c757d;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 0 5px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px !important;
+.btn-edit-inv {
+  background: #6c757d;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0 5px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px !important;
 }
 
-.mat-row, .mat-header-row {  
-    min-width: 2800px;  
-    width: 100%;  
- }  
- .table-100{
-    width: 140% !important;
- }
- .view-less {
-    font-size: 13px;
-    padding:1px;
-    cursor: pointer;
-    margin-right: 1px;
- }
+.mat-row,
+.mat-header-row {
+  min-width: 2800px;
+  width: 100%;
+}
+.table-100 {
+  width: 140% !important;
+}
+.view-less {
+  font-size: 13px;
+  padding: 1px;
+  cursor: pointer;
+  margin-right: 1px;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 1024px) {
+  ::-webkit-scrollbar {
+    display: block !important;
+  }
+  body {
+    overflow-x: scroll !important;
+  }
+}
